Converted storage and receiver to send data via kafka. Fixed datetime depracation warning. Not yet tested on other environements
